Fix white space on mobile and desktop; Fix issue with empty input auto-shrinking (#1143)
Added css styles and tweaks to remove excess whitespace.

Adjusted FitTextDirective directive class to enable textarea more robust autosizing.

--- a/src/angular-app/languageforge/lexicon/editor/field/_dc-rendered.scss
+++ b/src/angular-app/languageforge/lexicon/editor/field/_dc-rendered.scss
@@ -25,3 +25,11 @@
     font-style: normal;
   }
 }
+.dc-rendered-overflow{
+  @include media-breakpoint-down(sm) {
+   display: -webkit-box;
+   -webkit-line-clamp: 3;
+   -webkit-box-orient: vertical; 
+   overflow: hidden; 
+  }
+}
